crates/solidity/testing/snapshots/bindings_output/contracts/storage_layout_constant/generated/v2/0.7.4-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected IsKeyword or OpenBrace.
   ╭─[input.sol:3:1]
   │
 3 │ ╭─▶ contract X1 layout at C1 {
 4 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (1):
- Def: #1 ["C1" @ input.sol:1:18] (constant, type: uint256)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ uint256 constant C1 = 0;
   │                  ─┬  
   │                   ╰── name: 1
───╯
